Adding Complete product work

--- a/Mango.Web/Views/Home/Index.cshtml
+++ b/Mango.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@*model IEnumerable<ProductDto>
+﻿@model IEnumerable<ProductDto>
 
 <form>
     <div class="container row">
@@ -28,4 +28,3 @@
         }
     </div>
 </form>
-*@
